2008-09-25  Eric Botcazou  <ebotcazou@adacore.com>

	* dbxout.c (dbxout_parms): Fetch the inner REG inside a PARALLEL.

2008-09-25 Sergei Dyshel <sergeid@il.ibm.com>

      * matrix-reorg.c (transform_allocation_sites): Initializers 
	added to avoid the warning.

2008-09-25  Martin Jambor  <mjambor@suse.cz>

	* cgraph.c (free_nodes): New variable.
	(NEXT_FREE_NODE): New macro.
	(cgraph_create_node): Reuse nodes from the free list.  Do not
	update uid if doing so.
	(cgraph_remove_node): Add the node to the free list.

2008-09-25  Gerald Pfeifer  <gerald@pfeifer.com>

	* config/freebsd.h (HANDLE_PRAGMA_PACK_PUSH_POP): Define.

2008-09-24  Richard Henderson  <rth@redhat.com>

	* dwarf2.h (DW_OP_GNU_encoded_addr): New.
	* unwind-dw2.c (execute_stack_op): Handle it.

2008-09-24  David Edelsohn  <edelsohn@gnu.org>

	Revert:
	2008-09-24  Michael J. Eager  <eager@eagercon.com>

2008-09-24  Aldy Hernandez  <aldyh@redhat.com>

	* c-common.c (fname_decl): New location argument.
	* c-common.h (fname_decl): Same.
	* c-parser.c (c_lex_one_token): Use {warning,error}_at instead of
	{warning,error}.
	(c_parser_typeof_specifier): Same.
	(c_parser_parms_list_declarator): Same.
	(c_parser_asm_string_literal): Same.
	(c_parser_compound_statement_nostart): Same.
	(c_parser_label): Same.
	(c_parser_do_statement): Same.
	(c_parser_asm_statement): Same.
	(c_parser_unary_expression): Same.
	(c_parser_sizeof_expression): Same.
	(c_parser_postfix_expression): Same.
	(c_parser_pragma): Same.
	(c_parser_omp_clause_collapse): Same.
	(c_parser_omp_clause_num_threads): Same.
	(c_parser_omp_clause_schedule): Same.
	(c_parser_omp_all_clauses): Same.
	(c_parser_omp_sections_scope): Same.
	(c_parser_omp_for_loop): Same.  Pass condition's location to
	c_objc_common_truthvalue_conversion.
	(c_parser_enum_specifier): Remove comment.

2008-09-24  Michael J. Eager  <eager@eagercon.com>

	* config/rs6000/predicates.md (easy_fp_constant): Single FP consts
	are easy.